# kedro-init

./: README.md  pyproject.toml
docs/source/: conf.py
notebooks/: data-exploration.ipynb  first-exploration.ipynb
src/spaceflights/: __main__.py
